Refactorisation du model des livres